--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "@hookform/resolvers": "^2.9.11",
     "@mui/icons-material": "^5.11.9",
+    "@reduxjs/toolkit": "^1.9.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.24.10",
     "@tanstack/react-query-devtools": "^4.24.10",
+    "@tanstack/react-table": "^8.7.9",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -24,16 +27,20 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "firebase": "^9.17.1",
+    "google-map-react": "^2.2.0",
     "next": "13.2.1",
     "next-intl": "^2.10.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebaseui": "^6.0.0",
     "react-hook-form": "^7.43.2",
+    "react-redux": "^8.0.5",
     "swiper": "^9.0.5",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
