--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-dom": "18.2.0",
     "react-firebaseui": "^6.0.0",
     "react-hook-form": "^7.43.2",
+    "react-multi-date-picker": "^3.3.4",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "swiper": "^9.0.5",
     "typescript": "4.9.5",
