--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-next": "13.2.1",
     "firebase": "^9.17.1",
     "google-map-react": "^2.2.0",
+    "js-cookie": "^3.0.1",
     "next": "13.2.1",
     "next-intl": "^2.10.4",
     "react": "18.2.0",
