--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@headlessui-float/react": "^0.11.0",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "@hookform/resolvers": "^2.9.11",
     "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.14",
     "@reduxjs/toolkit": "^1.9.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
@@ -32,6 +38,7 @@
     "next": "13.2.1",
     "next-intl": "^2.10.4",
     "react": "18.2.0",
+    "react-docgen-typescript": "^2.2.2",
     "react-dom": "18.2.0",
     "react-firebaseui": "^6.0.0",
     "react-hook-form": "^7.43.2",
@@ -44,9 +51,19 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@storybook/addon-docs": "^7.0.0-rc.7",
+    "@storybook/addon-essentials": "^7.0.0-rc.7",
+    "@storybook/addon-interactions": "^7.0.0-rc.7",
+    "@storybook/addon-links": "^7.0.0-rc.7",
+    "@storybook/blocks": "^7.0.0-rc.7",
+    "@storybook/nextjs": "^7.0.0-rc.7",
+    "@storybook/react": "^7.0.0-rc.7",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "react-docgen-typescript-plugin": "^1.0.5",
+    "storybook": "^7.0.0-rc.7",
     "tailwindcss": "^3.2.7"
   }
 }
