--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "firebase": "^9.17.1",
+    "format-number": "^3.0.0",
     "google-map-react": "^2.2.0",
     "js-cookie": "^3.0.1",
     "next": "13.2.1",
     "next-intl": "^2.10.4",
+    "prettier": "^2.8.7",
     "react": "18.2.0",
     "react-docgen-typescript": "^2.2.2",
     "react-dom": "18.2.0",
