--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@etchteam/next-pagination": "^3.5.5",
     "@headlessui-float/react": "^0.11.0",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
