--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next-intl": "^2.10.4",
     "prettier": "^2.8.7",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-docgen-typescript": "^2.2.2",
     "react-dom": "18.2.0",
     "react-firebaseui": "^6.0.0",
