--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@storybook/react": "^7.0.0-rc.7",
     "@storybook/testing-library": "^0.0.14-next.1",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@types/react-color": "^3.0.6",
     "autoprefixer": "^10.4.13",
     "husky": "^8.0.0",
     "postcss": "^8.4.21",
