--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ NEXT_PUBLIC_APPID=1:441745767900:web:30a1817adb477a9d7e2319
 NEXT_PUBLIC_MEASUREMENTID=G-NQ8KGH2VYM
 # Google Captcha
 NEXT_PUBLIC_GOOGLE_RECAPTCHA_SITE_KEY=6Le7H_0cAAAAAIbs4BHbwYy-X4pXIWpm6DNMsWCR
+# Google Maps
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyDMlu3QFa6mfNpxhdTVyoXw98SSvR8IcEo
