add map component

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@etchteam/next-pagination": "^3.5.5",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@headlessui-float/react": "^0.11.0",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
@@ -68,6 +69,8 @@
     "@storybook/react": "^7.0.0-rc.7",
     "@storybook/testing-library": "^0.0.14-next.1",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@types/google-map-react": "^2.1.7",
+    "@types/google.maps": "^3.52.4",
     "@types/react-color": "^3.0.6",
     "autoprefixer": "^10.4.13",
     "husky": "^8.0.0",
