--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.14",
     "@reduxjs/toolkit": "^1.9.3",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
@@ -53,6 +55,7 @@
     "react-multi-date-picker": "^3.3.4",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
+    "stripe": "^11.17.0",
     "swiper": "^9.0.5",
     "typescript": "4.9.5",
     "yup": "^1.0.2"
