--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-multi-date-picker": "^3.3.4",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
+    "react-tag-input-component": "^2.0.2",
     "react-toastify": "^9.1.2",
     "swiper": "^9.0.5",
     "typescript": "4.9.5",
